22-Jan-2012 C AdditionalOptions have been moved to the end of the option collection, so that they override all settings before hand.

22-Jan-2012 Versioned compilers with specific option interfaces must also have their C++ equivalents derive from them, in order to propogate the additional C options. (Because of the SetDelegates change.) This still shares a lot of code with the common C++ option collections. This had to be done because C# does not allow deriving from a generic type.

22-Jan-2012 Opus.Core.BaseOptionCollection now has a virtual function SetDelegates(), which is required to be implemented by derived classes in order to assign delegates to handling each option.

22-Jan-2012 Removing 'Commandline: ' prefix from all verbose native build output. It does not improve the readability of the output.

22-Jan-2012 Adding DisableWarnings C options, which takes an Opus.Core.StringArray value. For VisualC, this is a list of compiler warning numbers to disable. For Gcc-like compilers, this is the name of the warning to disable, e.g. for -Wno-used-parameters pass "used-parameters". No warnings are disabled by default.

22-Jan-2012 Opus.Core.StringArray is now cloneable and can be used as an option value.

22-Jan-2012 Improved error checking while cloning reference types used in option collections.

22-Jan-2012 Improved error message if an option value has not been given a default.

21-Jan-2012 Fixing Opus.Core.RelativePathUtilities.MakeRelativePathAbsoluteToWorkingDir with relative paths containing '..'. These were not collapsed into a canonical pathname.

21-Jan-2012 The compiled assembly for a package is now written to the buildroot, and also a hash of the source code. If this hash is the same for the next run, the assembly is re-used. This can be disabled with the -nocache command line option.

21-Jan-2012 Enabled header dependency generation in C native builds by default. This can be disabled by passing -C.noheaderdeps on the command line to Opus.
